# Parallel_Background_Subtraction

./: CMakeLists.txt  MPI_Module.cpp  OpenMP_Module.cpp  README.md  Squential_Module.cpp  run_video_processing.sh
Failure_Trials/: Sequentail_Mean.cpp  Sequential_Base.cpp
